static/css/custom.css
hr {
  -moz-border-bottom-colors: none;
  -moz-border-image: none;
  -moz-border-left-colors: none;
  -moz-border-right-colors: none;
  -moz-border-top-colors: none;
  border-color: #EEEEEE -moz-use-text-color #FFFFFF;
  border-style: solid none;
  border-width: 1px 0;
  margin: 5em 0em 5em 0em;
  width: 100%; 
    /*border: 3px solid #73AD21;*/

}

body {
  background-color: #FFFFFF;
  font-family: 'Lato', sans-serif;
}

p {
  color:#a7a9ac;
  font-size: 16px;
  font-style: bold;
}

.navbar {
  font-family: 'Bitter', serif;
  color: #a7a9ac;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  font-size: 18px;
  font-weight: 900;
}

h3 {
  font-weight: 700;
}
h2 {
  color: #25408F;
  font-weight: 900;
  margin-top: 10px;
}

